Changed plugin description

--- a/bin/plugin.yml
+++ b/bin/plugin.yml
@@ -2,4 +2,4 @@ name: SafeItemFrames
 version: 1.0.1
 main: me.kevinnovak.safeitemframes.SafeItemFrames
 author: KevinNovak
-description: Fixes a glitch in Minecraft 1.8 or earlier where item frame items disappear.
+description: Fixes a glitch in Minecraft 1.8 or earlier where item frame items fly away or disappear.
